--- a/Phone_Development.mw
+++ b/Phone_Development.mw
@@ -19,7 +19,7 @@ Openmoko is still developing new phones. Each phone has an internal name before 
 == GTA01 (Neo 1973)==
 {{Main|GTA01 revisions}}
 
-== 3rdPary ==
+= 3rdPary =
 
 == DashExpress ==
 {{Main|DashExpress}}
