/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3035,6 +3035,8 @@ How to take:
 {| border="1"
 | Name
 | colspan="3"| number of items
+|@
+|remit
 |-
 |
 | FreeRunner
@@ -3045,51 +3047,71 @@ How to take:
 | 1
 | 1
 | 0
+| HsinChu
+| ---
 |-
 | 2. Siongui(siongui@)
 | 4
 | 1
 | 0
+|
+|
 |-
 | 3. Scott Wang (scott_wang@)
 | 1
 | 0
 | 0
+|
+|yes
 |-
 | 4. BlueT - Matthew Lien (bluetraveler@)
 | 1
 | 1
 | 0
+|
+|
 |-
 | 5. Allan Yang (allan.yang@)
 | 1
 | 1
 | 0
+|Taipei
+|yes
 |-
 | 6. Ping Yeh (ping.nsr.yeh@)
 | 1
 | 1
 | 0
+| 
+| 
 |-
 | 7. YiKai Lin (yikai.1982@)
 | 1
 | 1
 | 0
+| 
+| 
 |-
 | 8. Tony Chiu (tony.blc@)
 | 1
 | 0
 | 0
+| Taipei or HsinChu
+| yes
 |-
 | 9. Siongui(siongui@)
 | 1
 | 0
 | 0
+| 
+| 
 |-
 | 10. Terry Lin(terry_lin@)
 | 1
 | 1
 | 1
+| 
+| yes
 |-
 |Total number:
 | 13
