--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -194,6 +194,9 @@ AKII Technology Charger
 
 {{Main|Debug_Board_v3}}
 
+= Openness =
+{{Main|GTA02 Openness}}
+
 = Distinguishing hardware revisions =
 == Inside the [[Bootloader]] ==
 Every hardware revision has its own u-boot image type.  Thus, the bootloader has the revision hard-coded.
