/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3036,6 +3036,7 @@ How to take:
 | Name
 | colspan="3"| number of items
 |@
+|amount 
 |remit
 |-
 |
@@ -3049,14 +3050,16 @@ How to take:
 | 1
 | 1
 | 0
+| 13700 
 | HsinChu
 | ---
 |-
 | 2. Siongui(siongui@)
-| 4
+| 5
 | 1
 | 0
 |
+| 57700
 |
 |-
 | 3. Scott Wang (scott_wang@)
@@ -3064,6 +3067,7 @@ How to take:
 | 0
 | 0
 |
+| 11200
 |yes
 |-
 | 4. BlueT - Matthew Lien (bluetraveler@)
@@ -3071,6 +3075,7 @@ How to take:
 | 1
 | 0
 |
+| 13700
 |
 |-
 | 5. Allan Yang (allan.yang@)
@@ -3078,6 +3083,7 @@ How to take:
 | 1
 | 0
 |Taipei
+| 13700
 |yes
 |-
 | 6. Ping Yeh (ping.nsr.yeh@)
@@ -3085,6 +3091,7 @@ How to take:
 | 1
 | 0
 | 
+| 13700
 | 
 |-
 | 7. YiKai Lin (yikai.1982@)
@@ -3092,6 +3099,7 @@ How to take:
 | 1
 | 0
 | 
+| 13700
 | 
 |-
 | 8. Tony Chiu (tony.blc@)
@@ -3099,14 +3107,8 @@ How to take:
 | 0
 | 0
 | Taipei or HsinChu
+| 11200
 | yes
-|-
-| 9. Siongui(siongui@)
-| 1
-| 0
-| 0
-| 
-| 
 |-
 | 10. Terry Lin(terry_lin@)
 | 1
