*Empty MediaWiki Message*

--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -1,12 +1,35 @@
-* Feature: Processor + 64MB SDRAM + 256MB NAND + USB Host + USB Device
-* Product Homepage: [http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442 Samsung SC32442B]
-* User Manual: [http://210.118.57.197/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/SC32442/um_s3c2442b_rev12.pdf Samsung SC32442B]
-* Datasheet: [http://www.opatnet.cz/elektronika/datasheet/U/um_s3c2442b_rev12.pdf Samsung SC2442B]
+{| border=1  cellspacing='0' cellpadding=5
+|-
+| valign='top' | Feature
+|
+* Processor
+* 64MB SDRAM
+* 256MB NAND connected to the NAND controller
+* USB Host
+* USB Device
+|-
+| valign='top' | Specification
+| 
 * Core: ARM920T
 * Instruction Set: ARMv4
-* Built-in 64MB SDRAM
-* Built-in 256 MB NAND connected to the S3C2442 NAND controller
-* Evaluation board: [http://www.meritech.co.kr/products/product_view.php?num=52 S3C2442 EVB]
+|-
+| valign='top' | Product Homepage
+| http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442
+|-
+| valign='top' | Product User Manuel
+| http://210.118.57.197/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/SC32442/um_s3c2442b_rev12.pdf
+|-
+| valign='top' | Product Datasheet
+| http://www.opatnet.cz/elektronika/datasheet/U/um_s3c2442b_rev12.pdf
+|-
+| valign='top' | Driver
+|
+|-
+| valign='top' | Freedom Requirements
+| Docs available from Samsung, but not easily. Only after registering and qualifying. [http://www.elektronika.opatnet.cz/datasheet/U/um_s3c2442b_rev12.pdf here] is a copy.  um_s3c2442b_rev12.pdf]
+|}
+
+For information about the Evaluation board look [http://www.meritech.co.kr/products/product_view.php?num=52 here].
 
 [[User:HaraldWelte|Harald Welte]] wrote in [http://lists.openmoko.org/pipermail/neo1973-hardware/2007-September/000235.html  an e-mail] 
 to the neo1973-hardware mailing list:
