*Empty MediaWiki Message*

--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -89,3 +89,4 @@ In addition you need to make sure EN_USBHOST signal that enables the physical Ho
 * Mini-AB connector similar to [http://www.cypressindustries.com/shoponline/proddetail.asp?prod=CCMUSBAB-32005-700&cat=34 this one].
 
 [[Category:Used chip]]
+[[Category:GTA02 Hardware]]
