--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1077,6 +1077,10 @@ Provide walktie talkie functionality like http://www.domain17.net/walkietalkie/i
 
 Support UMTS via tether mode over WiFi (see [[UMTS]] for detailed information).
 
+=== Monitor mode ===
+
+Support for monitor mode (rfmon mode) so it can be used as a wifi diagnostic tool or as a WIDS. Packet injection would be fine too.
+
 == Wireless Piggyback ==
 
 HSDPA support and the like, so that users can connect directly with the internet with G3/G4 mobile service providers at speeds at or above 3.6 Mb/s.
