--- a/USB_Networking.mw
+++ b/USB_Networking.mw
@@ -256,7 +256,7 @@ The bug is that the LABEL="net_end" is at the wrong position
 
 
 This appears to be fixed in Ubuntu 8.04 [[User:Mattt|Mattt]] 11:38, 30 July 2008 (UTC)
-:Actually it appears that it's not fixed --[[User:Johndoesacc|Johndoesacc]] 18:37, 20 August 2008 (UTC)
+:Actually it appears that it's not fixed, but patching that file and disconnecting and reconnecting the phone works perfectly. --[[User:Johndoesacc|Johndoesacc]] 18:37, 20 August 2008 (UTC)
 
 == Mandriva ==
 
