*Empty MediaWiki Message*

--- a/USB_Product_IDs%2Fit.mw
+++ b/USB_Product_IDs%2Fit.mw
@@ -42,5 +42,5 @@ I suddetti ID sono stati già segnalati per essere inclusi in http://www.linux-u
 {{Languages|USB_Product_IDs}}
 
 
-[[Category:Hardware]]
-[[Category:USB| ]]
+[[Category:Hardware/it]]
+[[Category:USB/it| ]]
