*Empty MediaWiki Message*

--- a/Boot_from_sd_card%2Fzh_cn.mw
+++ b/Boot_from_sd_card%2Fzh_cn.mw
@@ -1,7 +1,7 @@
 {{Languages|Boot from sd card}}
-[[Category:Technical]]
-[[Category:Hardware]]
-[[Category:Documentation]]
+[[Category:Technical/zh cn]]
+[[Category:Hardware/zh cn]]
+[[Category:Documentation/zh cn]]
 =NOR in GTA02 history=
 __NOTOC__
 
