*Empty MediaWiki Message*

--- a/Boot_from_sd_card%2Fzh_tw.mw
+++ b/Boot_from_sd_card%2Fzh_tw.mw
@@ -1,7 +1,7 @@
 {{Languages|Boot from sd card}}
-[[Category:Technical]]
-[[Category:Hardware]]
-[[Category:Documentation]]
+[[Category:Technical/zh tw]]
+[[Category:Hardware/zh tw]]
+[[Category:Documentation/zh tw]]
 =NOR in GTA02 history=
 __NOTOC__
 
