*Empty MediaWiki Message*

--- a/Debug_Board_v2%2Fes.mw
+++ b/Debug_Board_v2%2Fes.mw
@@ -1,4 +1,4 @@
-{{Dboard}}
+{{Dboard/es}}
 
 
 En este apartado encontrará información sobre la tarjeta de entrenamiento Neo1973 en su segunda versión.La tarjeta de entrenamiento -o tarjeta de desarrollo- sólo está incluída en la versión para desarrolladores del  Neo1973
