Whitespace is misleading

--- a/Debug_Board_v2%2Fes.mw
+++ b/Debug_Board_v2%2Fes.mw
@@ -1,4 +1,4 @@
-{{Dboard/es}}
+{{Dboard}}
 
 
 En este apartado encontrará información sobre la tarjeta de entrenamiento Neo1973 en su segunda versión.La tarjeta de entrenamiento -o tarjeta de desarrollo- sólo está incluída en la versión para desarrolladores del  Neo1973
@@ -6,24 +6,6 @@ En este apartado encontrará información sobre la tarjeta de entrenamiento Neo1
 [[Image:Debugboard v2 diagram.png|left|500px|Arquitectura]]
 
 [[Image:Neo1973 debugboard v2 top annotated.jpg|left|500px|Circuito impreso]]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 == Visión general ==
 
@@ -264,6 +246,6 @@ Version 1 was never shipped to phase-0 or phase-1, and not sold to anyone.
 <span id="bottom"></span>
 {{Languages|Debug_Board}}
 
-[[Category:Hardware]]
-[[Category:Neo1973 Hardware]]
-[[Category:Neo1973 Hardware Debugging]]
+[[Category:Hardware/es]]
+[[Category:Neo1973 Hardware/es]]
+[[Category:Neo1973 Hardware Debugging/es]]
