*Empty MediaWiki Message*

--- a/Openmoko_supported_devices%2Fzh_cn.mw
+++ b/Openmoko_supported_devices%2Fzh_cn.mw
@@ -25,6 +25,6 @@
 
 * [[Other OSes|其它操作系统]]
 
-[[Category:Hardware ]]
-[[Category:Hardware Support| ]]
-[[Category:Documentation]]
+[[Category:Hardware/zh cn ]]
+[[Category:Hardware Support/zh cn| ]]
+[[Category:Documentation/zh cn]]
