*Empty MediaWiki Message*

--- a/Openmoko_supported_devices%2Fzh_tw.mw
+++ b/Openmoko_supported_devices%2Fzh_tw.mw
@@ -25,6 +25,6 @@
 
 * [[Other OSes|其它作業系統]]
 
-[[Category:Hardware ]]
-[[Category:Hardware Support| ]]
-[[Category:Documentation]]
+[[Category:Hardware/zh tw ]]
+[[Category:Hardware Support/zh tw| ]]
+[[Category:Documentation/zh tw]]
