*Empty MediaWiki Message*

--- a/GSM%2Fnl.mw
+++ b/GSM%2Fnl.mw
@@ -48,6 +48,6 @@ A more user-friendly resource is:
 * http://www.3gpp.org/ftp/Specs/archive/07_series/07.10/0710-720.zip
 
 {{Languages|SIM}}
-[[Category:Applications]]
-[[Category:Hardware]]
-[[Category:GSM]]
+[[Category:Applications/nl]]
+[[Category:Hardware/nl]]
+[[Category:GSM/nl]]
