*Empty MediaWiki Message*

--- a/Openmoko_supported_devices%2Fes.mw
+++ b/Openmoko_supported_devices%2Fes.mw
@@ -1,4 +1,3 @@
-
 [[Openmoko]] significa que puede ser usado en varios dispositivos.
 Las siguientes plataformas están soportadas en menor o mayor grado.
 
@@ -32,6 +31,6 @@ Las siguientes plataformas están soportadas en menor o mayor grado.
 
 * [[Other OSes]]
 {{Languages|Openmoko-supported hardware}}
-[[Category:Hardware ]]
-[[Category:Hardware Support| ]]
-[[Category:Documentation]]
+[[Category:Hardware/es ]]
+[[Category:Hardware Support/es| ]]
+[[Category:Documentation/es]]
