--- a/USB_Networking%2Fde.mw
+++ b/USB_Networking%2Fde.mw
@@ -313,5 +313,5 @@ Beachten Sie, dass der Befehl xhost entfernten Anwendungen auf 192.168.0.200 den
 <span id="bottom"></span> 
 {{Languages|USB Networking}}
 
-[[Category:Hardware]]
-[[Category:Implemented]]
+[[Category:Hardware/de]]
+[[Category:Implemented/de]]
