--- a/Wiggler%2Fit.mw
+++ b/Wiggler%2Fit.mw
@@ -3,4 +3,4 @@ wiggler è il nome di un semplice adattatore JTAG per porta parallela.
 La board di sviluppo QT2410 e' corredata di un adattatore wiggler compatibile JTAG.
 {{Languages|Wiggler}}
 
-[[Category:Hardware]]
+[[Category:Hardware/it]]
