*Empty MediaWiki Message*

--- a/Neo_1973%2Ffr.mw
+++ b/Neo_1973%2Ffr.mw
@@ -87,4 +87,4 @@ Page traduite de la version anglophone du [http://wiki.openmoko.org/index.php?ti
 
 {{Languages|Neo1973}}
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/fr| ]]
