*Empty MediaWiki Message*

--- a/Neo_1973%2Ffr.mw
+++ b/Neo_1973%2Ffr.mw
@@ -4,7 +4,7 @@ C'est un téléphone qui peut être utilisé avec n'importe quelle compagnie [[G
 
 Si vous venez tout juste de recevoir un Neo1973, voici [[Getting Started with your Neo1973/fr|quelques suggestions pour commencer]].
 
-Les pages suivantes ont plus d'informations sur le matériel : [[Category:Hardware|hardware]] et [[Disassembling Neo1973|désassemblage du Neo1973]].
+Les pages suivantes ont plus d'informations sur le matériel : [[:Category:Hardware/fr|hardware]] et [[Disassembling Neo1973|désassemblage du Neo1973]].
 
 Pour plus d'informations sur le code source, voir [[Openmoko/fr|Openmoko]], [[OpenmokoFramework|framework Openmoko]], [[MokoMakefile|MokoMakefile]] et [[Development resources/fr|ressources de développement]].
 
@@ -87,4 +87,5 @@ Page traduite de la version anglophone du [http://wiki.openmoko.org/index.php?ti
 
 {{Languages|Neo1973}}
 
+[[Cateogry:Hardware/fr]]
 [[Category:Neo1973 Hardware/fr| ]]
