*Empty MediaWiki Message*

--- a/Gpsd%2Fzh_cn.mw
+++ b/Gpsd%2Fzh_cn.mw
@@ -94,4 +94,4 @@ Gpsd 利用以下的部份与系统进行沟通：
 
 A: 无法直接取得数据。然而，gpsd 程序的'gpspipe'，加入 -r 则可以目前的位置，输出NMEA数据。正确的方法是在程序里使用libgpsd。
 
-[[Category:GPS]]
+[[Category:GPS/zh cn]]
