*Empty MediaWiki Message*

--- a/Gpsd%2Fzh_tw.mw
+++ b/Gpsd%2Fzh_tw.mw
@@ -94,4 +94,4 @@ Gpsd 利用以下的部份與系統進行溝通：
 
 A: 無法直接取得資料。然而，gpsd 程式的'gpspipe'，加入 -r 則可以目前的位置，輸出NMEA資料。正確的方法是在程式裡使用libgpsd。
 
-[[Category:GPS]]
+[[Category:GPS/zh tw]]
