*Empty MediaWiki Message*

--- a/Neo_FreeRunner_GTA02_Hardware_Requirements%2Fru.mw
+++ b/Neo_FreeRunner_GTA02_Hardware_Requirements%2Fru.mw
@@ -184,4 +184,4 @@ The device can withstand a 4.0kV contact discharge and  8.0kV air
 === Ударные нагрузки ===
 Should pass 1m direct drop to concrete ground or 1.5m on slide with carpet
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/ru]]
