*Empty MediaWiki Message*

--- a/Neo_FreeRunner_GTA02_Hardware%2Fkr.mw
+++ b/Neo_FreeRunner_GTA02_Hardware%2Fkr.mw
@@ -1,4 +1,4 @@
-{{Languages|네오 프리러너 GTA02 하드웨어}}
+{{Languages|Neo FreeRunner GTA02 Hardware}}
 [[오픈코코]]는 하드웨어 위에 올라가는 소프트웨어 플랫폼입니다. 네오 프리러너 핸드폰은 오픈모코을 이용할 수 있는 두 번째 하드웨어 플랫폼 입니다. 여기에는 하드웨어 사양을 기술하여 놓았고, 문서의 맨 밑에는 관련된 문서들이 연결되어 있습니다. 
 
 <!-- {{note|This page is about hardware that is currently in '''design/prototype''' phase, changes are frequent}} -->
@@ -591,4 +591,4 @@ The kernel exports the system_rev variable in /proc/cpuinfo as "Revision :" line
 **NCC certification number: CCAF08DG0080T0 
 **[http://people.openmoko.org/tony_tu/GTA02/certificate/NCC NCC test report]
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/kr]]
