*Empty MediaWiki Message*

--- a/Neo_1973_vs_Neo_FreeRunner.mw
+++ b/Neo_1973_vs_Neo_FreeRunner.mw
@@ -42,8 +42,8 @@ Expandable with any-size [http://lists.openmoko.org/pipermail/community/2007-Feb
 Expandable with any-size [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/551-81172-581.html microSD or microSDHC]  cards
  |-
  |[[Neo1973_Hardware#Processor|CPU]]
- |Samsung s3c2410 SoC @ 266 MHz ([http://lists.openmoko.org/pipermail/announce/2007-January/000000.html source])
- |Samsung 2442 SoC @ 400 MHz ([http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442&&ppmi= source])
+ |[[Samsung S3C2410]] SoC @ 266 MHz ([http://lists.openmoko.org/pipermail/announce/2007-January/000000.html source])
+ |[[Samsung 2442]] SoC @ 400 MHz ([http://www.samsung.com/global/business/semiconductor/productInfo.do?fmly_id=229&partnum=SC32442&&ppmi= source])
  |-
  |Graphics Accelerator
  |
