--- a/Neo_FreeRunner%2Fzh_cn.mw
+++ b/Neo_FreeRunner%2Fzh_cn.mw
@@ -33,4 +33,4 @@ FreeRunner 与 [[Neo1973]] 共有的特质如下：
 == 产品售价？==
 我们将透过多个不同的通路来销售我们的产品。关于经销信息及最后产品价格尚未订出。
 
-[[Category:GTA02 Hardware| ]]
+[[Category:GTA02 Hardware/zh cn| ]]
