*Empty MediaWiki Message*

--- a/Neo_FreeRunner%2Fit.mw
+++ b/Neo_FreeRunner%2Fit.mw
@@ -44,4 +44,4 @@ In Europa si può acquistare da diversi rivenditori ad un prezzo compreso tra i 
 
 Sono previsti sostanziali sconti nel caso di un acquisto in blocco di 10 unità che hanno portato alla creazione di diversi [http://www.openmoko.org/wiki/GroupSales gruppi di acquisto].
 
-[[Category:GTA02 Hardware| ]]
+[[Category:GTA02 Hardware/it| ]]
