--- a/Neo_FreeRunner%2Fnl.mw
+++ b/Neo_FreeRunner%2Fnl.mw
@@ -142,4 +142,4 @@ The Openmoko Wiki is open. Everyone can join. You'll find information including:
 <font color=426fdc>※</font>[[:Category: Help |  See More About Help ]]
 
 
-[[Category:GTA02 Hardware| ]]
+[[Category:GTA02 Hardware/nl| ]]
