*Empty MediaWiki Message*

--- a/Neo_FreeRunner%2Ffr.mw
+++ b/Neo_FreeRunner%2Ffr.mw
@@ -54,4 +54,4 @@ Le téléphone sera vendu via plusieurs distributeurs ([http://www.openmoko.com 
 
 [http://www.brax4your.net/omoko modèle tridimensionnel du Neo FreeRunner, cliquer/glisser pour faire pivoter]
 
-[[Category:GTA02 Hardware| ]]
+[[Category:GTA02 Hardware/fr| ]]
