*Empty MediaWiki Message*

--- a/FreeRunner_Overview%2Fcs.mw
+++ b/FreeRunner_Overview%2Fcs.mw
@@ -6,4 +6,4 @@ Openmoko je distribuce softwaru sedicí na vrcholu hardwarové platformy. Telefo
 
 </div>
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/cs]]
