--- a/FreeRunner_Overview%2Fit.mw
+++ b/FreeRunner_Overview%2Fit.mw
@@ -6,4 +6,4 @@ Openmoko is a software distribution stack that sits on top of a hardware platfor
 
 </div>
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/it]]
