--- a/IPhone%2Fit.mw
+++ b/IPhone%2Fit.mw
@@ -105,5 +105,5 @@ Forse sarà espandibile con [http://www.techtree.com/India/News/Samsung_Readies_
  |}
 {{Languages|iPhone}}
 
-[[Category:GTA02 Hardware]]
-[[Category:Information]]
+[[Category:GTA02 Hardware/it]]
+[[Category:Information/it]]
