*Empty MediaWiki Message*

--- a/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fee.mw
+++ b/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fee.mw
@@ -87,6 +87,6 @@ Laiendatav [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_Card/
 
 {{Languages|Neo1973: GTA01Bv4 versus GTA02 comparison}}
 
-[[Category:Neo1973 Phase 1 related]]
-[[Category:GTA02 Hardware]]
-[[Category:Information]]
+[[Category:Neo1973 Phase 1 related/ee]]
+[[Category:GTA02 Hardware/ee]]
+[[Category:Information/ee]]
