*Empty MediaWiki Message*

--- a/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fnl.mw
+++ b/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fnl.mw
@@ -94,7 +94,7 @@ Expandable with [http://www.techtree.com/India/News/Samsung_Readies_8GB_microSD_
  |}
 
 {{Languages|Neo1973: GTA01Bv4 versus GTA02 comparison}}
-[[Category:Hardware ]]
-[[Category:Neo1973 Hardware]]
-[[Category:GTA02 Hardware]]
-[[Category:Information]]
+[[Category:Hardware/nl ]]
+[[Category:Neo1973 Hardware/nl]]
+[[Category:GTA02 Hardware/nl]]
+[[Category:Information/nl]]
