*Empty MediaWiki Message*

--- a/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fzh_cn.mw
+++ b/Neo1973:_GTA01Bv4_versus_GTA02_comparison%2Fzh_cn.mw
@@ -93,5 +93,5 @@
  |-
  |}
 
-[[Category:GTA02 Hardware]]
-[[Category:Information]]
+[[Category:GTA02 Hardware/zh cn]]
+[[Category:Information/zh cn]]
