--- a/Coding_Guidelines%2Fes.mw
+++ b/Coding_Guidelines%2Fes.mw
@@ -26,6 +26,6 @@ Esta es una buena guía de codificación en C:
 <span id="bottom"></span> 
 {{Languages|Coding_Guidelines}}
 
-[[Category:Software (non openmoko)]]
-[[category:Technical]]
-[[category:Documentation]]
+[[Category:Software (non openmoko)/es]]
+[[category:Technical/es]]
+[[category:Documentation/es]]
