*Empty MediaWiki Message*

--- a/Coding_Guidelines%2Fit.mw
+++ b/Coding_Guidelines%2Fit.mw
@@ -23,6 +23,6 @@ Questa è una buona guida alla programmazione in C:
 <span id="bottom"></span> 
 {{Languages|Coding_Guidelines}}
 
-[[Category:Software (non openmoko)]]
-[[category:Technical]]
-[[category:Documentation]]
+[[Category:Software (non openmoko)/it]]
+[[category:Technical/it]]
+[[category:Documentation/it]]
