/* AT&T */ old SIM was *not* reliable, but new SIM is

--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -37,6 +37,8 @@ for AT+COPS
 |-
 | 71234 || G || 3022 || blazing 3G fireball || Does not register, suspect mis-aligned pins [http://s292.photobucket.com/albums/mm27/SchadowScythe/?action=view&current=3gFireball.png Screenshot]
 |-
+| 71234 || G  ||  3022 || blazing 3G fireball || sometimes registers, but usually needs a reboot or modem power down&up and then registers. contacts were too close to edge, touched tab on bracket. Changed for 71234_O_4022 SIM
+|-
 | 71234 || O || 4021 || blazing 3G fireball ||
 |-
 | 73000 || O || 4021 || blazing 3G fireball || This sim will not work for me, although a user has gotten it to work below.  Those steps only produce CME ERROR 13, regardless of amount of waiting.
@@ -63,8 +65,6 @@ for AT+COPS
 |-
 | 71234 || G  ||  3022 || blazing 3G fireball || registers, sends/receives calls with FreeRunner right out of the box. 
 |-
-| 71234 || G  ||  3022 || blazing 3G fireball || usually registers/sends/receives instantly-- sometime needs a reboot and then registers. AT&T corporate suggested I go to a true AT&T store that sells iPhones, for the SIM that worked!
-|-
 | 71234 || G || 3022 || blazing 3G fireball ||  $15 ($30 with $15 instant rebates) GoPhone kit at RadioShack.  Pulled the sim out of the kit phone when I got home, stuck it in my Freerunner, and it worked.  SMS doesn't seem to be working though (nothing shows up in the messages app).
 |-
 | 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]  
@@ -72,6 +72,8 @@ for AT+COPS
 | 71234 || O || 4022 || blazing 3G fireball || Two more confirmed working with FreeRunner.  Previous 4021 chip did not work properly.
 |-
 | 71234 || O || 4022 || blazing 3G fireball || It only partially worked, at first. (I had reception, but it always said "Registering..." in the upper-left of the screen.) After wiggling the sim card slightly, and rebooting the phone, it eventually changed from &quot;Registering&quot; to &quot;AT&amp;T&quot;.
+|-
+| 71234 || O || 4022 || blazing 3G fireball || changed to this after reliability problems with 71234_G_3022 SIM. *This* SIM seems to always connect immediately without powering GSM down&up. Same SIM model as purchased on eBay, but AT&T traded this one for free.
 |-
 | 73000 || O || 4021 || blazing 3G fireball || tried it using libgsm-tool -m shell (O, R). Just have to wait for 30-40 sec after registering. Then you can make calls consistently.
 |-
