*Empty MediaWiki Message*

--- a/Qtopia_on_Neo_1973%2Fde.mw
+++ b/Qtopia_on_Neo_1973%2Fde.mw
@@ -123,6 +123,6 @@ Zu den Vollbildvideos, (346 MiB):
 
 {{Languages|Qtopia_on_Neo1973}}
 
-[[Category:Distributions]]
-[[Category:Software (non openmoko)]]
-[[Category:Applications]]
+[[Category:Distributions/de]]
+[[Category:Software (non openmoko)/de]]
+[[Category:Applications/de]]
