--- a/How_to_run_Openmoko_Apps_on_PC%2Fru.mw
+++ b/How_to_run_Openmoko_Apps_on_PC%2Fru.mw
@@ -86,5 +86,5 @@
 
 {{Languages|How to run Openmoko Apps on PC}}
 
-[[Category:Emulation|*]]
-[[Category:Guides]]
+[[Category:Emulation/ru|*]]
+[[Category:Guides/ru]]
