*Empty MediaWiki Message*

--- a/How_to_run_Openmoko_Apps_on_PC%2Fit.mw
+++ b/How_to_run_Openmoko_Apps_on_PC%2Fit.mw
@@ -83,5 +83,5 @@ Consultare anche [[Getting Openmoko working on host with Xoo/it]].
 
 {{Languages|How to run Openmoko Apps on PC}}
 
-[[Category:Emulation|*]]
-[[Category:Guides]]
+[[Category:Emulation/it|*]]
+[[Category:Guides/it]]
