*Empty MediaWiki Message*

--- a/Automatic_emulation_in_Ubuntu%2Fde.mw
+++ b/Automatic_emulation_in_Ubuntu%2Fde.mw
@@ -101,4 +101,4 @@ unter dem Namen der bei der Paketerstellung ausgewählt wurde.
 == Probleme ==
 Wenn du irgendwelche Probleme hast, kannst du hier Fragen stellen.
 
-[[Category:Emulation]]
+[[Category:Emulation/de]]
