*Empty MediaWiki Message*

--- a/Getting_Openmoko_working_on_host_with_Xephyr%2Fit.mw
+++ b/Getting_Openmoko_working_on_host_with_Xephyr%2Fit.mw
@@ -165,5 +165,5 @@ Vedere [[Getting Openmoko working on host with Xoo/it|Far funzionare Openmoko su
 <span id="bottom"></span> 
 {{Languages|Getting_Openmoko_working_on_host_with_Xephyr}}
 
-[[Category:Emulation]]
-[[Category:Guides]]
+[[Category:Emulation/it]]
+[[Category:Guides/it]]
