*Empty MediaWiki Message*

--- a/Host-based_development_with_Xoo_and_Xephyr%2Fit.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr%2Fit.mw
@@ -75,6 +75,6 @@ Da questo momento dovresti avere Xnest & Xoo che eseguono OpenMoko in una finest
 <span id="bottom"></span> 
 
 {{Languages|Host-based development with Xoo and Xephyr}}
-[[Category:Technical]]
-[[Category:Documentation]]
-[[Category:Emulation]]
+[[Category:Technical/it]]
+[[Category:Documentation/it]]
+[[Category:Emulation/it]]
