--- a/Host-based_development_with_Xoo_and_Xephyr%2Fru.mw
+++ b/Host-based_development_with_Xoo_and_Xephyr%2Fru.mw
@@ -58,6 +58,6 @@ ebuild /usr/portage/x11-misc/xoo/xoo-0.7.ebuild digest
 В окошке Xoo должен запуститься matchbox.
 
 {{Languages|Host-based development with Xoo and Xephyr}}
-[[Category:Technical]]
-[[Category:Documentation]]
-[[Category:Emulation]]
+[[Category:Technical/ru]]
+[[Category:Documentation/ru]]
+[[Category:Emulation/ru]]
