--- a/Openmoko_under_QEMU%2Fit.mw
+++ b/Openmoko_under_QEMU%2Fit.mw
@@ -307,5 +307,5 @@ Linux fic-gta01 2.6.20.7-moko8 #1 PREEMPT Wed Apr 25 11:13:52 UTC 2007 armv4tl u
 <span id="bottom"></span>
 {{Languages|Openmoko_under_QEMU}}
 
-[[Category:Emulation]]
-[[Category:Guides]]
+[[Category:Emulation/it]]
+[[Category:Guides/it]]
