--- a/Debian.mw
+++ b/Debian.mw
@@ -23,6 +23,8 @@ and make it wake up again with pressing the power button.
 Issues:
 * [[User:Wuth|Wuth]] 06:28, 17 August 2008 (UTC): I found that apmd was already installed by using the official debian installation procedure, but that the kernel didn't support apm.  I haven't yet resolved this issue.
 
+* [[User:Phyce|Phyce]] 21:33, 20 August 2008 (UTC)  installed apm without problems; apm -s shutdowns the freerunner but I couldn't wake it up with power button... I had to remove the battery to boot again. suspend/resume was working quite reliably with latest kernels on ASU.
+
 == Time ==
 
 The default time zone is UTC.  Reconfigure it by running
