--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -51,8 +51,8 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 ===<font color=white>Software</font>===
 * [[Distributions|Distribuciones Openmoko]]
 * [[OpenmokoFramework|Distribución FSO]]
-* [[Openmoko2007.2|Distribución 2007.2]]
-* [[Openmoko2008.8|Distribución 2008.8]]
+* [[Openmoko2007.2/es|Distribución 2007.2]]
+* [[Openmoko2008.8/es|Distribución 2008.8]]
 * [[Qtopia_on_FreeRunner|Distribución Qtopia]]
 
 ===<font color=white>Comunidad Openmoko</font>===
