--- a/Openmoko_under_QEMU%2Fzh_cn.mw
+++ b/Openmoko_under_QEMU%2Fzh_cn.mw
@@ -452,5 +452,5 @@ Please note that QEMU will wait for you to connect to the telnet server at port 
 
 {{Languages|Openmoko_under_QEMU}}
 
-[[Category:Emulation]]
-[[Category:Guides]]
+[[Category:Emulation/zh cn]]
+[[Category:Guides/zh cn]]
