*Empty MediaWiki Message*

--- a/Openmoko_under_QEMU%2Fzh_tw.mw
+++ b/Openmoko_under_QEMU%2Fzh_tw.mw
@@ -444,5 +444,5 @@ Please note that QEMU will wait for you to connect to the telnet server at port 
 
 {{Languages|Openmoko_under_QEMU}}
 
-[[Category:Emulation]]
-[[Category:Guides]]
+[[Category:Emulation/zh tw]]
+[[Category:Guides/zh tw]]
