--- a/Running_Openmoko_on_PC%2Fit.mw
+++ b/Running_Openmoko_on_PC%2Fit.mw
@@ -21,5 +21,5 @@ Attualmente, la documentazione di Xephyr è più aggiornata. --[[User:Miohtama|M
 
 {{Languages|Running_Openmoko_on_PC}}
 
-[[Category:Emulation]]
-[[Category:Guides]]
+[[Category:Emulation/it]]
+[[Category:Guides/it]]
