--- a/System_Developer%2Fru.mw
+++ b/System_Developer%2Fru.mw
@@ -24,4 +24,4 @@
 *** [[Userspace root image]]
 {{Languages|System_Developer}}
 
-[[Category:System Developers| ]]
+[[Category:System Developers/ru| ]]
