*Empty MediaWiki Message*

--- a/System_Developer%2Fit.mw
+++ b/System_Developer%2Fit.mw
@@ -24,4 +24,4 @@ Alcuni programmi girano sul PC collegato allo smartphone.
 *** [[Userspace root image/it|Immagine root dell'utente]]
 {{Languages|System_Developer}}
 
-[[Category:System Developers| ]]
+[[Category:System Developers/it| ]]
