--- a/System_Developer%2Fes.mw
+++ b/System_Developer%2Fes.mw
@@ -23,4 +23,4 @@ Mucho del software corre con el PC conectado al smartphone.
 *** [[Userspace root image]] la imagen en espacio de root
 {{Languages|System_Developer}}
 
-[[Category:System Developers| ]]
+[[Category:System Developers/es| ]]
