*Empty MediaWiki Message*

--- a/System_Developer%2Fzh_tw.mw
+++ b/System_Developer%2Fzh_tw.mw
@@ -20,4 +20,4 @@
 *** [[Openmoko2007]] 首先釋出
 *** [[Userspace root image]]
 
-[[Category:System Developers| ]]
+[[Category:System Developers/zh tw| ]]
