--- a/Devirginator%2Fit.mw
+++ b/Devirginator%2Fit.mw
@@ -236,5 +236,5 @@ il corretto splash screen ed infine ci sarà il boot di Linux.
 Da definirsi.
 {{Languages|Devirginator}}
 
-[[Category:System Developers]]
-[[Category:Guides]]
+[[Category:System Developers/it]]
+[[Category:Guides/it]]
