--- a/Dfu-util%2Fzh_cn.mw
+++ b/Dfu-util%2Fzh_cn.mw
@@ -125,5 +125,5 @@ Once this has finished, the kernel will be available at the default load address
 
 {{Languages|Dfu-util}}
 
-[[Category:System Developers]]
-[[Category:Guides]]
+[[Category:System Developers/zh cn]]
+[[Category:Guides/zh cn]]
