*Empty MediaWiki Message*

--- a/U-Boot%2Fde.mw
+++ b/U-Boot%2Fde.mw
@@ -737,4 +737,4 @@ Das Problem verschwindet zumindest auf der Hoste seite durch den Befehl unten. B
 
 {{Languages|Bootloader}}
 
-[[Category:System Developers]]
+[[Category:System Developers/de]]
