*Empty MediaWiki Message*

--- a/U-Boot%2Fru.mw
+++ b/U-Boot%2Fru.mw
@@ -701,4 +701,4 @@ The problem disappeared at least for me by the command below on the host side. P
 
 {{Languages|Bootloader}}
 
-[[Category:System Developers]]
+[[Category:System Developers/ru]]
