*Empty MediaWiki Message*

--- a/U-Boot%2Fzh_cn.mw
+++ b/U-Boot%2Fzh_cn.mw
@@ -387,4 +387,4 @@ usb usb2: Controller not stopped yet!
 
 rmmod uhci_hcd ; modprobe uhci_hcd
 
-[[Category:System Developers]]
+[[Category:System Developers/zh cn]]
