--- a/U-Boot%2Fzh_tw.mw
+++ b/U-Boot%2Fzh_tw.mw
@@ -384,4 +384,4 @@ usb usb2: Controller not stopped yet!
 
  rmmod uhci_hcd ; modprobe uhci_hcd
 
-[[Category:System Developers]]
+[[Category:System Developers/zh tw]]
