*Empty MediaWiki Message*

--- a/Neo1973_OpenOCD%2Fzh_cn.mw
+++ b/Neo1973_OpenOCD%2Fzh_cn.mw
@@ -164,4 +164,4 @@ warning: shared library handler failed to enable breakpoint
 在'''telnet''' 指令列，并使用 '''hbreak''' 在gdb中设定断点。
 
 
-[[Category:System Developers]]
+[[Category:System Developers/zh cn]]
