*Empty MediaWiki Message*

--- a/Neo1973_OpenOCD%2Fzh_tw.mw
+++ b/Neo1973_OpenOCD%2Fzh_tw.mw
@@ -161,4 +161,4 @@ warning: shared library handler failed to enable breakpoint
 
 在'''telnet''' 指令列，並使用 '''hbreak''' 在gdb中設定中斷點。
 
-[[Category:System Developers]]
+[[Category:System Developers/zh tw]]
