*Empty MediaWiki Message*

--- a/OpenmokoFramework%2Ffr.mw
+++ b/OpenmokoFramework%2Ffr.mw
@@ -339,4 +339,4 @@ Note: If you have implemented a task, please edit this page and add a '[done]' b
 
 * ...
 
-[[Category:Framework| ]]
+[[Category:Framework/fr| ]]
