*Empty MediaWiki Message*

--- a/OpenmokoFramework%2Fzh_cn.mw
+++ b/OpenmokoFramework%2Fzh_cn.mw
@@ -191,4 +191,4 @@ The milestone releases are combined Openmoko Framework and [[Zhone]] releases. R
 
 ----
 
-[[Category:Framework| ]]
+[[Category:Framework/zh cn| ]]
