*Empty MediaWiki Message*

--- a/OpenmokoFramework%2Fes.mw
+++ b/OpenmokoFramework%2Fes.mw
@@ -196,4 +196,4 @@ The milestone releases are combined Openmoko Framework and [[Zhone]] releases. R
 
 ----
 
-[[Category:Framework| ]]
+[[Category:Framework/es| ]]
