*Empty MediaWiki Message*

--- a/SettingsGUI%2Fde.mw
+++ b/SettingsGUI%2Fde.mw
@@ -209,6 +209,6 @@ But to do this you'll also have to install the packages:
 ==References==
 * [http://www.mput.de/projects/code/settingsgui/ Project Homepage]
 
-[[Category:Applications]]
-[[Category:Openmoko]]
-[[Category:Guides]]
+[[Category:Applications/de]]
+[[Category:Openmoko/de]]
+[[Category:Guides/de]]
