*Empty MediaWiki Message*

--- a/Kernel%2Fzh_cn.mw
+++ b/Kernel%2Fzh_cn.mw
@@ -330,4 +330,4 @@ root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/battemp
 
 {{Languages|Kernel}}
 
-[[Category:Kernel]]
+[[Category:Kernel/zh cn]]
