*Empty MediaWiki Message*

--- a/UI_Improvements%2Ffr.mw
+++ b/UI_Improvements%2Ffr.mw
@@ -387,6 +387,4 @@ Doable, but tricky...
 
 {{Languages|UI Improvements}}
 
-[[Category:User Interfaces| ]]
-
-[[Category:User Interfaces| ]]
+[[Category:User Interfaces/fr| ]]
