*Empty MediaWiki Message*

--- a/GUI_Style_Guidelines%2Fes.mw
+++ b/GUI_Style_Guidelines%2Fes.mw
@@ -123,4 +123,4 @@ clase especifica que se esta creando.
 
 
 {{Languages|GUI_Style_Guidelines}}
-[[Category:User Interfaces]]
+[[Category:User Interfaces/es]]
