*Empty MediaWiki Message*

--- a/Manuals%2FNeo_1973%2Fde.mw
+++ b/Manuals%2FNeo_1973%2Fde.mw
@@ -77,4 +77,4 @@ Infos hierzu unter [[u-boot#Using_usbtty_from_Linux]]
 
 <span id="bottom">{{Languages|Getting_Started_with_your_Neo1973}}</span>
 
-[[Category:Neo1973 Hardware]]
+[[Category:Neo1973 Hardware/de]]
