*Empty MediaWiki Message*

--- a/Manuals%2FNeo_1973%2Fit.mw
+++ b/Manuals%2FNeo_1973%2Fit.mw
@@ -127,4 +127,4 @@ Questo archivia le cinque partizioni NAND in file di nome mtdblock*. Conoscendo 
 
 <span id="bottom">{{Languages|Getting_Started_with_your_Neo1973}}</span>
 
-[[Category:Neo1973 Hardware]]
+[[Category:Neo1973 Hardware/it]]
