*Empty MediaWiki Message*

--- a/Manuals%2FNeo_1973%2Fru.mw
+++ b/Manuals%2FNeo_1973%2Fru.mw
@@ -11,4 +11,4 @@
 
 <span id="bottom">{{Languages|Getting_Started_with_your_Neo1973}}</span>
 
-[[Category:Neo1973 Hardware]]
+[[Category:Neo1973 Hardware/ru]]
