*Empty MediaWiki Message*

--- a/Neo1973_Hardware%2Fzh_cn.mw
+++ b/Neo1973_Hardware%2Fzh_cn.mw
@@ -230,4 +230,4 @@ This is the version that will be shipped in Phase 1
 内核在/proc/cpuinfo文件中“Revision :”行导出system_rev变量。
 {{Languages|Neo1973 Hardware}}
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/zh cn| ]]
