--- a/Neo1973_Hardware%2Fde.mw
+++ b/Neo1973_Hardware%2Fde.mw
@@ -233,4 +233,4 @@ The kernel exports the system_rev variable in /proc/cpuinfo as "Revision :" line
 
 {{Languages|Neo1973 Hardware}}
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/de| ]]
