--- a/Neo_1973%2Fde.mw
+++ b/Neo_1973%2Fde.mw
@@ -45,4 +45,4 @@ Und auch [[FAQ]] f&uuml;r die meistgestellten Fragen.
 <span id="bottom"></span>
 {{Languages|Neo1973}}
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/de| ]]
