*Empty MediaWiki Message*

--- a/Neo_1973%2Fpl.mw
+++ b/Neo_1973%2Fpl.mw
@@ -88,6 +88,6 @@ GTA02 będzie miało następujące nowe podzespoły: [http://lists.openmoko.org/
 Urządzenie będzie dostępne przez kilka kanałów sprzedaży. 
 Bezpośrednio na openmoko.com urządzenie ma kosztować $450 w wersji Neo Base i $600 w wersji Neo Advanced.
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/pl| ]]
 
 {{Languages|Neo1973}}
