*Empty MediaWiki Message*

--- a/Neo_1973%2Fcs.mw
+++ b/Neo_1973%2Fcs.mw
@@ -79,4 +79,4 @@ Rozdíly proti verzi z Etapy 1 (podrobné [[Neo1973:_GTA01Bv4_versus_GTA02_compa
 
 {{Languages|Neo1973}}
 
-[[Category:Neo1973 Hardware| ]]
+[[Category:Neo1973 Hardware/cs| ]]
