--- a/Neo1973_Battery%2Fde.mw
+++ b/Neo1973_Battery%2Fde.mw
@@ -13,4 +13,4 @@ Diese Batterien sind recht günstig bei Ebay zu haben. (Die Qualität unterschei
 <span id="bottom"></span>
 {{Languages|Neo1973_Battery}}
 
-[[Category:Neo1973 Hardware]]
+[[Category:Neo1973 Hardware/de]]
