*Empty MediaWiki Message*

--- a/Debug_Board_v2%2Fit.mw
+++ b/Debug_Board_v2%2Fit.mw
@@ -185,4 +185,4 @@ Prima utilizzavamo la [[Debug Board v1/it | Debug Board v1]]
 <span id="bottom"></span>
 {{Languages|Debug_Board}}
 
-[[Category:Neo1973 Hardware Debugging]]
+[[Category:Neo1973 Hardware Debugging/it]]
