*Empty MediaWiki Message*

--- a/Hardware_Developer%2Fit.mw
+++ b/Hardware_Developer%2Fit.mw
@@ -12,4 +12,4 @@ In questa sezione si trovano informazioni principalmente per gli sviluppatori ha
 {{Languages|Hardware_Developer}}
 
 [[Category:Hardware/it]]
-[[Category:Neo1973 Hardware Debugging]]
+[[Category:Neo1973 Hardware Debugging/it]]
