*Empty MediaWiki Message*

--- a/Disassembling_Neo1973%2Fde.mw
+++ b/Disassembling_Neo1973%2Fde.mw
@@ -72,5 +72,5 @@ Am oberen Ende des Bildes befinden sich Durchbrüche im Gehäuse für die Extern
 <span id="bottom"></span>
 {{Languages|Disassembling_Neo1973}}
 
-[[Category:Neo1973 Phase 1 related]]
-[[Category:Neo1973 Phase 0 related]]
+[[Category:Neo1973 Phase 1 related/de]]
+[[Category:Neo1973 Phase 0 related/de]]
