--- a/Disassembling_Neo1973%2Fru.mw
+++ b/Disassembling_Neo1973%2Fru.mw
@@ -85,5 +85,5 @@ The external GSM antenna connector is accessed through this hole.
 <span id="bottom"></span>
 {{Languages|Disassembling_Neo1973}}
 
-[[Category:Neo1973 Phase 1 related]]
-[[Category:Neo1973 Phase 0 related]]
+[[Category:Neo1973 Phase 1 related/ru]]
+[[Category:Neo1973 Phase 0 related/ru]]
