--- a/S3C2410_Steppingstone%2Fit.mw
+++ b/S3C2410_Steppingstone%2Fit.mw
@@ -7,6 +7,6 @@ Il bootloader dopo ha bisogno di codice per caricare il rimanente codice del boo
 <span id="bottom"></span> 
 {{Languages|S3C2410_Steppingstone}}
 
-[[Category:Neo1973 Phase 1 related]]
-[[Category:Neo1973 Phase 0 related]]
-[[Category:Neo1973 before Phase 0 related]]
+[[Category:Neo1973 Phase 1 related/it]]
+[[Category:Neo1973 Phase 0 related/it]]
+[[Category:Neo1973 before Phase 0 related/it]]
