*Empty MediaWiki Message*

--- a/Manuals%2FNeo_1973%2Ffr.mw
+++ b/Manuals%2FNeo_1973%2Ffr.mw
@@ -140,5 +140,5 @@ Vous voulez probablement jouer avec quelque uns des intéressants périphérique
 
 <span id="bottom">{{Languages|Getting_Started_with_your_Neo1973}}</span>
 
-[[Category:Documentation]]
-[[Category:Neo1973_Phase_1_related]]
+[[Category:Documentation/fr]]
+[[Category:Neo1973_Phase_1_related/fr]]
