--- a/Manuals%2FNeo_1973%2Fzh_cn.mw
+++ b/Manuals%2FNeo_1973%2Fzh_cn.mw
@@ -230,5 +230,5 @@ You'll probably want to play with some of the interesting hardware in this devic
 
 <span id="bottom">{{Languages|Getting_Started_with_your_Neo1973}}</span>
 
-[[Category:Documentation]]
-[[Category:Neo1973_Phase_1_related]]
+[[Category:Documentation/zh cn]]
+[[Category:Neo1973_Phase_1_related/zh cn]]
