--- a/Car_phone_holder%2Fde.mw
+++ b/Car_phone_holder%2Fde.mw
@@ -25,4 +25,4 @@ Auf den Bildern ist des weiteren die Navilock NL-65AT Antenne mit dem Antennenha
 
 {{Languages|Car_phone_holder_for_neo1973}}
 
-[[Category:Neo1973 and external hardware]]
+[[Category:Neo1973 and external hardware/de]]
