*Empty MediaWiki Message*

--- a/External_GPS_antennas%2Fde.mw
+++ b/External_GPS_antennas%2Fde.mw
@@ -13,4 +13,4 @@ Die Antenne wurde bisher nur kurz getestet. Es scheint aber so, als ob sich die 
 
 {{Languages|GPS_antennas_for_neo1973}}
 
-[[Category:Neo1973 and external hardware]]
+[[Category:Neo1973 and external hardware/de]]
