--- a/Manually_using_GSM%2Fzh_tw.mw
+++ b/Manually_using_GSM%2Fzh_tw.mw
@@ -146,7 +146,7 @@ Tui (available from [http://www.sf.net/projects/tui sourceforge]) is able to do 
 
 See [[Manually using GPRS]]
 
-[[Category:Documentation]]
-[[Category:Application Developer]]
-[[Category:Technical]]
-[[Category:GSM]]
+[[Category:Documentation/zh tw]]
+[[Category:Application Developer/zh tw]]
+[[Category:Technical/zh tw]]
+[[Category:GSM/zh tw]]
