*Empty MediaWiki Message*

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -132,5 +132,5 @@ Qtopia comes with support for German and American English, and users from other 
 
 Adding characters to the keyboard requires modifications to the source code, as described [http://www.qtopia.net/modules/newbb_plus/viewtopic.php?topic_id=512&forum=16 here].
 
-[[Category:Distributions]]
-[[Category:Qtopia]]
+[[Category:Distributions/it]]
+[[Category:Qtopia/it]]
