/* How to build */  sp

--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -52,7 +52,7 @@ To free disk space after builds, add:
 
  INHERIT += "rm_work"
 
-Replace "${HOME}/oe" with the path to where your "org.openembeded.dev" folder lives. For the other entries have a look at ''conf/local.conf.sample'' about their meaning.
+Replace "${HOME}/oe" with the path to where your "org.openembedded.dev" folder lives. For the other entries have a look at ''conf/local.conf.sample'' about their meaning.
 
 Run ''bitbake <package name>'' (e.g. openmoko-devel-image).
 
