*Empty MediaWiki Message*

--- a/BitBake%2Fzh_cn.mw
+++ b/BitBake%2Fzh_cn.mw
@@ -11,4 +11,4 @@ BitBake是[[OpenEmbedded]]用来建立build的工具。以下是一个openmoko-c
 
 你可以在 [http://bitbake.berlios.de/manual/ BitBake berlios page 这个位置找到使用者手册].
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh cn]]
