--- a/BitBake%2Fzh_tw.mw
+++ b/BitBake%2Fzh_tw.mw
@@ -11,4 +11,4 @@ BitBake是[[OpenEmbedded]]用來建立build的工具。以下是一個openmoko-c
 
 你可以在 [http://bitbake.berlios.de/manual/ BitBake berlios page 這個位置找到使用者手冊].
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh tw]]
