--- a/Community_Resources%2Fes.mw
+++ b/Community_Resources%2Fes.mw
@@ -212,4 +212,4 @@ Vea [[OpenMoko_Local_Groups|OpenMoko Local Groups]]
 
 {{Languages|Development_resources}}
 
-[[Category:Application Developer]]
+[[Category:Application Developer/es]]
