*Empty MediaWiki Message*

--- a/Community_Resources%2Fit.mw
+++ b/Community_Resources%2Fit.mw
@@ -232,4 +232,4 @@ C'è anche un canale #openmoko-devel, che è solo per gli sviluppatori interni d
 
 {{Languages|Development_resources}}
 
-[[Category:Application Developer]]
+[[Category:Application Developer/it]]
