--- a/Community_Resources%2Fzh_cn.mw
+++ b/Community_Resources%2Fzh_cn.mw
@@ -213,4 +213,4 @@ https://lists.internal.openmoko.org/mailman/listinfo/buglog
 
 {{Languages|Development_resources}}
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh cn]]
