*Empty MediaWiki Message*

--- a/Community_Resources%2Fzh_tw.mw
+++ b/Community_Resources%2Fzh_tw.mw
@@ -183,4 +183,4 @@ Subversion (svn) 樹狀目錄如下：
 
 {{Languages|Development resources}}
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh tw]]
