*Empty MediaWiki Message*

--- a/Gsmd%2Fit.mw
+++ b/Gsmd%2Fit.mw
@@ -180,4 +180,4 @@ I sorgenti di gsmd si trovano nell'[[OpenMoko svn/it|svn di OpenMoko]] nella dir
 
 {{Languages | Gsmd}}
 
-[[Category:Application Developer]]
+[[Category:Application Developer/it]]
