*Empty MediaWiki Message*

--- a/Gsmd%2Fru.mw
+++ b/Gsmd%2Fru.mw
@@ -199,5 +199,5 @@ Sources of gsmd are kept in [[Openmoko svn]] in src/target/gsm directory.
 
 {{Languages | Gsmd}}
 
-[[Category:Application Developer]]
-[[Category:Implemented]]
+[[Category:Application Developer/ru]]
+[[Category:Implemented/ru]]
