*Empty MediaWiki Message*

--- a/Gsmd%2Fzh_cn.mw
+++ b/Gsmd%2Fzh_cn.mw
@@ -235,5 +235,5 @@ gsmd source被放置在src/target/gsm 目录下的[[Openmoko svn]]。
 
 {{Languages | Gsmd}}
 
-[[Category:Application Developer]]
-[[Category:Implemented]]
+[[Category:Application Developer/zh cn]]
+[[Category:Implemented/zh cn]]
