*Empty MediaWiki Message*

--- a/MokoMakefile%2Fes.mw
+++ b/MokoMakefile%2Fes.mw
@@ -308,5 +308,5 @@ http://mokomakefile.projects.openmoko.org/
 
 {{Languages|MokoMakefile}}
 
-[[Category:Application Developer]]
-[[Category:Guides]]
+[[Category:Application Developer/es]]
+[[Category:Guides/es]]
