*Empty MediaWiki Message*

--- a/MokoMakefile%2Fzh_cn.mw
+++ b/MokoMakefile%2Fzh_cn.mw
@@ -332,6 +332,6 @@ MokoMakefile被#openmoko开发人员所推崇：
 http://mokomakefile.projects.openmoko.org/
 
 
-[[Category:Openmoko]]
-[[Category:Applications]]
-[[Category:Application Developer]]
+[[Category:Openmoko/zh cn]]
+[[Category:Applications/zh cn]]
+[[Category:Application Developer/zh cn]]
