--- a/MokoMakefile%2Fzh_tw.mw
+++ b/MokoMakefile%2Fzh_tw.mw
@@ -331,6 +331,6 @@ MokoMakefile被#openmoko開發人員所推崇：
 專案網頁：
 http://mokomakefile.projects.openmoko.org/
 
-[[Category:Openmoko]]
-[[Category:Applications]]
-[[Category:Application Developer]]
+[[Category:Openmoko/zh tw]]
+[[Category:Applications/zh tw]]
+[[Category:Application Developer/zh tw]]
