*Empty MediaWiki Message*

--- a/OpenEmbedded%2Fzh_cn.mw
+++ b/OpenEmbedded%2Fzh_cn.mw
@@ -31,5 +31,5 @@
 
 {{todo|finish article}}
 
-[[Category:Application Developer]]
-[[Category:Openmoko]]
+[[Category:Application Developer/zh cn]]
+[[Category:Openmoko/zh cn]]
