*Empty MediaWiki Message*

--- a/OpenEmbedded%2Fzh_tw.mw
+++ b/OpenEmbedded%2Fzh_tw.mw
@@ -33,5 +33,5 @@
 
 {{Languages|OpenEmbedded}}
 
-[[Category:Application Developer]]
-[[Category:Openmoko]]
+[[Category:Application Developer/zh tw]]
+[[Category:Openmoko/zh tw]]
