--- a/Toolchain%2Fde.mw
+++ b/Toolchain%2Fde.mw
@@ -262,4 +262,4 @@ Siehe auch [[Customizing the Openmoko Distribution/de|Anpassung der Openmoko Dis
 
 * Bitte die [http://lists.openmoko.org/mailman/listinfo/openmoko-devel Openmoko-Devel] mailing list benutzen.
 
-[[Category:Application Developer]]
+[[Category:Application Developer/de]]
