--- a/Toolchain%2Fzh_cn.mw
+++ b/Toolchain%2Fzh_cn.mw
@@ -228,4 +228,4 @@ myapp_control的模板如下：
 
 * 请使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel OpenMoko-Devel] 邮件列表来获得帮助。
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh cn]]
