*Empty MediaWiki Message*

--- a/Toolchain%2Fzh_tw.mw
+++ b/Toolchain%2Fzh_tw.mw
@@ -227,4 +227,4 @@ myapp_control的範本：
 
 * 請使用[http://lists.openmoko.org/mailman/listinfo/openmoko-devel OpenMoko-Devel] 郵件清單來取得更多幫助。
 
-[[Category:Application Developer]]
+[[Category:Application Developer/zh tw]]
