*Empty MediaWiki Message*

--- a/Openmoko_Visits_and_Hiring_Day%2Fzh_tw.mw
+++ b/Openmoko_Visits_and_Hiring_Day%2Fzh_tw.mw
@@ -27,5 +27,5 @@ Openmoko 是一家 100% 純正的 Free & Open Source Software 公司，並且是
 ** 12:00PM ~ 01:30PM: 餐聚與 Openmoko 介紹
 ** 下午 02:00PM 開始正式面試。
 
-[[Category:Community]]
-[[Category:Event]]
+[[Category:Community/zh tw]]
+[[Category:Event/zh tw]]
