--- a/Distributions%2Fhe.mw
+++ b/Distributions%2Fhe.mw
@@ -66,5 +66,5 @@
 (1) עובד, אך זקוק לתוכנות נוספות לשם הפעלה.
 
 
-[[Category:Distributions| ]]
-[[Category:Documentation]]
+[[Category:Distributions/he| ]]
+[[Category:Documentation/he]]
