*Empty MediaWiki Message*

--- a/Distributions%2Ffr.mw
+++ b/Distributions%2Ffr.mw
@@ -192,5 +192,5 @@ Notes annexes:
 
 Les descriptions originelles des distributions proviennent du Mickey Layer's [http://www.vanille-media.de/site/index.php/2008/06/28/gtk-asu-fso-tmtla/ GTK, ASU, FSO, TMTLA!].
 
-[[Category:Distributions|Distributions]]
-[[Category:Documentation]]
+[[Category:Distributions/fr]]
+[[Category:Documentation/fr]]
