*Empty MediaWiki Message*

--- a/Om_2007.2%2Fes.mw
+++ b/Om_2007.2%2Fes.mw
@@ -292,5 +292,5 @@ Para terminar edita /etc/mrxvt/mrxvt.conf
 
 {{Languages|Om 2007.2}}
 
-[[Category:Distributions]]
-[[Category:Om  2007.2]]
+[[Category:Distributions/es]]
+[[Category:Om  2007.2/es]]
