*Empty MediaWiki Message*

--- a/Om_2008.8%2Fde.mw
+++ b/Om_2008.8%2Fde.mw
@@ -53,5 +53,5 @@ Om 2008.8 erlaubt es Dir Dein Neo in vielerlei Hinsicht anzupassen.
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.rootfs.jffs2 Om2008.8.rootfs.jffs2]
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.uImage.bin Om2008.8.uimage.bin]
 
-[[Category:Distributions]]
-[[Category:Om 2008.8]]
+[[Category:Distributions/de]]
+[[Category:Om 2008.8/de]]
