*Empty MediaWiki Message*

--- a/Om_2008.8%2Fcs.mw
+++ b/Om_2008.8%2Fcs.mw
@@ -117,5 +117,5 @@ V mezičase můžete na vlastní riziko zkusit [[Downloads#Unofficial_builds_by_
 
 Akutalizováno --[[User:Fox|Fox]] 10:42, 16 August 2008 (UTC)
 Případné chyby mi nahlaste nebo ještě lépe je rovnou opravte.
-[[Category:Openmoko]]
-[[Category:Om 2008.8]]
+[[Category:Openmoko/cs]]
+[[Category:Om 2008.8/cs]]
